--- a/style.css
+++ b/style.css
@@ -4,18 +4,112 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: auto;
+}
+ /* header */
+header {
+  background-color: black;
+  height: 100px;
+}
+
+.search-film {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 50px;
+}
+
+.logo {
+  height: 100px;
+  width: 250px;
+}
+
 
 button {
+  background-color: #E50914;
+  border: 0 none transparent;
+  border-radius: 30px;
+  height: 30px;
+  margin-right: 20px;
+  padding: 0 10px;
+}
+
+#search{
+  border: 0 none transparent;
+  height: 30px;
+  outline: none;
+  border-radius: 20px;
   padding: 10px;
 }
 
-.dimension {
+
+
+
+/* /header */
+
+#list-films {
+  display: flex;
+  width: 100%;
+  height: 420px;
+  padding: 0 20px;
+  overflow-x: auto;
+
+}
+
+#list-telefilms {
+  display: flex;
+  width: 100%;
+  height: 420px;
+  padding: 0 20px;
+  overflow-x: auto;
+}
+
+.cont-img-films, .cont-img-telefilms {
+  position: relative;
+}
+
+
+.cont-img-films:hover .info-films {
+  display: block;
+}
+
+.cont-img-telefilms:hover .info-telefilms{
+  display: block;
+}
+
+.cont-img-films > img, .cont-img-telefilms > img {
+  height: 265px;
+
+}
+
+
+li {
+  list-style: none;
+  padding: 0 15px;
+}
+
+.dimension-lang {
   height: 20px;
   width: 20px;
   vertical-align: middle;
+
 }
 
 .fa-star {
   color: yellow;
   filter: drop-shadow(1px 1px 0px black);
+}
+
+.info-films, .info-telefilms{
+  display: none;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  width: calc(100% - 30px);
+  height: 265px;
+  padding: 15px;
+  top: 0;
+  left: 15px;
+  font-size: 14px;
+  color: white;
 }
