--- a/style.css
+++ b/style.css
@@ -6,12 +6,17 @@
 
 body {
   margin: auto;
+  background-color: black;
 }
  /* header */
 header {
   background-color: black;
   height: 100px;
 }
+
+
+
+/* search film e telefilms */
 
 .search-film {
   display: flex;
@@ -32,7 +37,7 @@ button {
   border-radius: 30px;
   height: 30px;
   margin-right: 20px;
-  padding: 0 10px;
+  padding: 0 15px;
 }
 
 #search{
@@ -43,15 +48,23 @@ button {
   padding: 10px;
 }
 
+/* /search film e telefilms */
+
 
 
 
 /* /header */
 
+/* list-films e telefilms */
+
+h2 {
+  color: white;
+}
+
 #list-films {
   display: flex;
-  width: 100%;
-  height: 420px;
+  width: 90%;
+  height: 265px;
   padding: 0 20px;
   overflow-x: auto;
 
@@ -60,7 +73,7 @@ button {
 #list-telefilms {
   display: flex;
   width: 100%;
-  height: 420px;
+  height: 265px;
   padding: 0 20px;
   overflow-x: auto;
 }
@@ -95,21 +108,26 @@ li {
   vertical-align: middle;
 
 }
-
+/* stellina */
 .fa-star {
   color: yellow;
   filter: drop-shadow(1px 1px 0px black);
+}
+
+.text-trama {
+  font-size: 8px;
 }
 
 .info-films, .info-telefilms{
   display: none;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
-  width: calc(100% - 30px);
+  width: calc(100% - 22px);
   height: 265px;
-  padding: 15px;
+  padding: 11px;
   top: 0;
-  left: 15px;
-  font-size: 14px;
+  left: 11px;
+  font-size: 11px;
   color: white;
 }
+/* /list-films e telefilms */
